Tue Aug  9 14:59:39 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/Publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/Subscriber.cpp:

          Fixed use of operator== with TAO vars (vc71 didn't like it).

        * dds/DCPS/Service_Participant.cpp:

          Initialize DCPSPendingTimeout with the default value.

        * dds/DCPS/transport/tcp/TcpTransport.cpp:

          Add an un-needed initialization to silence compiler warnings.

        * java/dds/OpenDDS_DCPS_jni.cpp:

          Throw an exception if the transport type string isn't recognized.

        * performance-tests/DCPS/Priority/Options.cpp:

          Assist SunCC's standard library implementation with explicit
          construction of std::strings.

Tue Aug  9 14:45:00 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS_dup_DataLib.genmodel:
        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS_dup_DcpsLib.genmodel:
        * tools/modeling/plugins/org.opendds.modeling.model/model/OpenDDS_dup_PolicyLib.genmodel:

          Update to account for transportConfig being added to model.

        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgraph:

          Added labels for transportConfig.

        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfmap:

          Incorporated transportConfig attribute.

        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.trace:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/plugin.xml:

          GMF Auto generated updates based on inclusion of transportConfig.
          Note there's currently an issue with
          org.opendds.modeling.diagram.dcpslib.part.OpenDDSDcpsLibUriEditorInputTester
          not being generated by GMF. This results in a No property tester